--- a/Project1Prueba/Project1Prueba/ClientApp/src/components/style.css
+++ b/Project1Prueba/Project1Prueba/ClientApp/src/components/style.css
@@ -1,3 +1,9 @@
 ﻿h1, p {
     font-family: Lato;
 }
+.right {
+    float: right;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
